# PackageKit-Qt

./: .gitmodules  README
PackageKit-Qt/: AUTHORS  CMakeLists.txt
PackageKit-Qt/src/: CMakeLists.txt  packagekit-qt2.pc.in  packagekit-qt5.pc.in  transaction.cpp  transaction.h
PackageKit-Qt/src/modules/: CMakeLists.txt
rpm/: PackageKit-Qt.spec  PackageKit-Qt5.spec
